--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img class="fundo" src="img/fundonuvem.jpg" alt="" loading="lazy" />
       <img class="imgcard" src="img/urso.png" alt="" />
       <header class="cabecalho">
-       <h1>chá rifa do</h1>
+       <h1>Chá rifa do</h1>
        <h2>josé heverlon</h2>
        <p class="texto1">em meio a esse momento que estamos
        vivendo, mamãe resolveu inovar.
