--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ até dia 10/04.</p>
 
 <section class="pd">
   <div class="premiacao">
-    Prêmio <br>r$ 100,00
+    Prêmio <br>R$ 100,00
   </div>
   <div class="data">
     Até o dia 20/11/2021<br>
