--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <h2>José Heverlon</h2>
        <p class="texto1">Em meio a esse momento que estamos
        vivendo, mamãe resolveu inovar.
-       para que possamos comemorar
+       Para que possamos comemorar
        em segurança, faremos um chá rifa.</p>
        <p class="fralda">Cada número da rifa =<br><span><img class="imgfralda" src="img/fralda.png" alt="" />1 pacote de fraldas + mimo.</span></p>
       </header>
