--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ até dia 20/11.</p>
     Prêmio <br>R$ 100,00
   </div>
   <div class="data">
-    Até o dia 28/11/2021<br>
+    Data do sorteio 28/11/2021<br>
   </div>
 </section>
 
